[package]
name = "horizon"
version = "0.9.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.11.0"
argon2 = "0.5.3"
subtle = "2.6.1"

secrecy = { version = "0.8.0", features = ["alloc"] }
once_cell = "*"
hkdf = "0.13.0-rc.0"
hmac = "0.13.0-rc.0"
sha2 = "0.11.0-rc.0"
zeroize = "1.8.1"
dashmap =  { version = "*", features = ["rayon", "inline"] }
ring = "0.17.14"
blake3 = "1.8.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
inherits = "release"
debug = true